[gd_scene load_steps=4 format=3 uid="uid://b4v85ddke6qgi"]

[ext_resource type="Script" path="res://FarmerAndMouseDetector/FarmerAndMouseDectector.gd" id="1_x4udp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7oolt"]
radius = 28.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ck4q"]
size = Vector2(39, 26)

[node name="FarmerAndMouseDectector" type="Node2D"]
script = ExtResource("1_x4udp")

[node name="FarmerHitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FarmerHitBox"]
visible = false
shape = SubResource("CircleShape2D_7oolt")

[node name="MouseHitBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseHitBox"]
visible = false
shape = SubResource("RectangleShape2D_6ck4q")

[connection signal="area_entered" from="FarmerHitBox" to="." method="_on_farmer_hit_box_area_entered"]
[connection signal="area_exited" from="FarmerHitBox" to="." method="_on_farmer_hit_box_area_exited"]
[connection signal="input_event" from="MouseHitBox" to="." method="_on_mouse_hit_box_input_event"]
[connection signal="mouse_entered" from="MouseHitBox" to="." method="_on_mouse_hit_box_mouse_entered"]
[connection signal="mouse_exited" from="MouseHitBox" to="." method="_on_mouse_hit_box_mouse_exited"]
